# Kaminari-Ryu

./: .gitignore  LICENSE  README.md  test-linux-docker.sh
.github/: metadata.json
.github/workflows/: release-raijin-cli.yml
host/: Raijin.slnx
host/Raijin.Cli/: README.md  build.sh  go.mod  go.sum  main.go
host/Raijin.Cli/cmd/: add.go  assets.go  bench.go  demos.go  help.go  info.go  install.go  menu.go  remove.go  resolve.go  root.go  run.go  uninstall.go  uninstall_helpers_unix.go  uninstall_helpers_windows.go  version.go
host/Raijin.Cli/installer/: main.go
host/Raijin.Cli/internal/catalog/: catalog.go
host/Raijin.Cli/internal/pathing/: pathing.go  pathing_unix.go  pathing_windows.go
host/Raijin.Cli/internal/report/: report.go  summary.go
host/Raijin.Cli/internal/runner/: keys.go  keys_win.go  rawmode_darwin.go  rawmode_linux.go  rawmode_unix.go  rawmode_win.go  runner.go  stdin_flush_darwin.go  stdin_flush_linux.go  stdin_other.go  stdin_win.go  terminal.go
host/Raijin.Cli/internal/sim/: exedir.go  loader_unix.go  loader_windows.go  session.go  sim.go
host/Raijin.Cli/internal/suggest/: suggest.go
host/Raijin.Cli/internal/theme/: theme.go
host/Raijin.Core/: Raijin.Core.csproj  RaijinHandle.cs  SimulationService.cs
host/Raijin.Core/Models/: CpuSnapshot.cs
host/Raijin.Core/Native/: RaijinNative.cs
host/Raijin.Web/: Program.cs  Raijin.Web.csproj
host/Raijin.Web/Components/: App.razor  MixCard.razor  StatsBar.razor  Terminal.razor  _Imports.razor
host/Raijin.Web/Components/Pages/: Dashboard.razor
host/Raijin.Web/Services/: SimulationRunner.cs
host/Raijin.Web/wwwroot/: app.css  terminal-interop.js
raijin/: README.md
raijin/dv/: alu_tb.v  branch_unit_tb.v  control_tb.v  coverage_tb.v  csr_file_tb.v  decoder_tb.v  dmem_tb.v  imem_tb.v  imem_test.hex  pc_reg_tb.v  raijin_core_tb.v  regfile_tb.v  riscv_test_tb.v  soft_int_tb.v  timer_int_tb.v  zicsr_tb.v
raijin/programs/: coverage_all.hex  coverage_all.s  donut.c  donut.hex  matrix.c  matrix.hex  snake.c  snake.hex  soft_int_test.hex  soft_int_test.py  sum_1_to_5.hex  sum_1_to_5.s  timer_int_test.hex  timer_int_test.py  zicsr_test.hex  zicsr_test.s
raijin/programs/doom/: README.md  build.sh  link.ld  raijin_init.c  raijin_input.c  raijin_time.c  raijin_video.c  syscalls.c  wad_blob.S
raijin/rtl/: alu.v  branch_unit.v  clint.v  control.v  csr_file.v  decoder.v  dmem.v  imem.v  m_unit.v  pc_reg.v  raijin_core.v  raijin_defs.vh  regfile.v  riscv_defs.vh  uart_sim.v
sim/: CMakeLists.txt  README.md  dpi_hooks.cpp  raijin_api.cpp  raijin_api.h
tools/: README.md  activate.sh  rasm.py
tools/bench-harness/: bench.c
tools/c-runtime/: crt.S  link.ld
tools/c-runtime/shims/: assert.h  string.h  util.h
tools/isa-runtime/: link.ld
tools/runners/: activate-toolchain.sh  asm_mini.py  build_builtin_programs.py  elf2hex.py  run_benchmarks.py  run_c_program.py  run_riscv_tests.py
